# schumacher

./: .gitattributes  .gitignore  README.md
report/: bibl.bib  schumacher.tex
src/: AABB.cpp  AABB.h  CMakeLists.txt  Ray.cpp  Ray.h  camera.h  cornellboxfactory.h  glmprint.h  glrenderer.cpp  glrenderer.h  imageexporter.cpp  imageexporter.h  intersectionpoint.h  lightsource.cpp  lightsource.h  main.cpp  material.h  materialmanager.cpp  materialmanager.h  mesh.cpp  mesh.h  montecarlotracer.cpp  montecarlotracer.h  montecarlotracer2.cpp  montecarlotracer2.h  octree.cpp  octree.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h  progressbar.cpp  progressbar.h  quadrilateral.cpp  quadrilateral.h  raytracer.cpp  raytracer.h  renderable.h  scenebuilder.h  simpleraycaster.cpp  (+11 more)
src/sfmt/: test.c
